--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div class="offset-md-2 col-md-8 col-sm-12">
 				<h1 class="intro">L’expansion du nouveau coronavirus</h1>
 
-				<p class="lead">Le 2019-nCov a causé <span class="deaths_total">____</span> décès et plus de <span class="confirmed_total_floor">_____</span> infections confirmées dans le monde, selon les chiffres compilés par l’université Johns-Hopkins</p>
+				<p class="lead">Le virus du Covid-19 a causé <span class="deaths_total">____</span> décès et plus de <span class="confirmed_total_floor">_____</span> infections confirmées dans le monde, selon les chiffres compilés par l’université Johns-Hopkins</p>
 
 				<p>L’université John-Hopkins, sur la côte est des Etats-Unis, compile les données de la plateforme chinoise <a href="https://3g.dxy.cn/newh5/view/pneumonia?scene=2">DXY.cn</a> et de différentes agences de santé publique et les publie chaque soir vers 18 heures (minuit en Suisse).</p>
 
@@ -271,7 +271,7 @@
 
 				var chartCases = c3.generate({
 					padding: {
-						right: 40,
+						right: 40
     			},
 					size: {
 						height: 200
