--- a/embed_code.html
+++ b/embed_code.html
@@ -2,5 +2,5 @@
 <iframe seamless frameBorder=0
     width="650"
     height="500"
-    src="https://labs.letemps.ch/interactive/2020/carte-coronavirus-monde/embed.html">
+    src="embed.html">
 </iframe>
