--- a/embedCH.html
+++ b/embedCH.html
@@ -71,18 +71,18 @@
 		<div class="row numbers align-items-top margin-bottom outline worldmap">
 
 			<div class="col-12 group-label">
-				<h2><a href="https://labs.letemps.ch/interactive/2020/carte-coronavirus-monde/">Le Covid-19 en Suisse et dans le monde</a></h2>
+				<h2><a target="_blank" href="https://labs.letemps.ch/interactive/2020/carte-coronavirus-monde/">Le Covid-19 en Suisse et dans le monde</a></h2>
 			</div>
 			<div class="text-center" id="corona-search">
-				<a href="https://labs.letemps.ch/interactive/2020/carte-coronavirus-monde/">
+				<a target="_blank" href="https://labs.letemps.ch/interactive/2020/carte-coronavirus-monde/">
 				<!-- desktop -->
-				<video class="d-none d-sm-block" loop="" muted="" autoplay="" playsinline="">
-					<source src="img/rec_desktop.mp4?2" type="video/mp4">
+				<video class="d-none d-sm-block" loop="true" muted="true" autoplay="true" playsinline="">
+					<source src="img/rec_desktop_v2.mp4?2" type="video/mp4">
 					Votre navigateur ne supporte pas les vidéos HTML.
 				</video>
 				<!-- mobile -->
-				<video class="d-block d-sm-none" loop="" muted="" autoplay="" playsinline="">
-					<source src="img/rec_mobile.mp4" type="video/mp4">
+				<video class="d-block d-sm-none" loop="true" muted="true" autoplay="true" playsinline="">
+					<source src="img/rec_mobile_v2.mp4" type="video/mp4">
 					Votre navigateur ne supporte pas les vidéos HTML.
 				</video>
 				</a>
