--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-{% use '_blocks.html.twig' %}
+<!-- [twig template] use '_blocks.html.twig' -->
 
 <!DOCTYPE HTML>
 
 <html>
 <head>
 
-	{{ block('head_brand') }}
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,800" rel="stylesheet">
@@ -30,9 +31,9 @@
 
 <body>
 
-	{{ block('bar_brand') }}
+	
 
-	{# Emplacement pour le contenu principal #}
+	<!-- Emplacement pour le contenu principal -->
 	<div class="container">
 
 		<div class="row">
@@ -550,7 +551,7 @@
 	</div>
 </div>
 
-{{ block('footer_brand') }}
+
 
 <!-- 14 merged, minified libraries -->
 <script src="lib-merged/libraries.js"></script>
