--- a/embedCH.html
+++ b/embedCH.html
@@ -4,98 +4,89 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css?UPDATE" />
 	<style>
 	body{
+		border-bottom: none;
 		padding: 0;
 		margin: 0;
-		max-width: 600px;
-	}
-	#screenshot-img{
-		max-width: 100%;
-		max-height: 240px;
-		width: auto;
-		position: relative;
-		z-index: 0;
-	}
-	#cursor{
-		width: 40%;
-		position: fixed;
-		bottom: 20%;
-		left: 30%;
-		transform: rotate(-20deg);
-		z-index: 10;
-		transition-duration: 0.3s;
-		padding-left: 10%;
-		padding-right: 10%;
-	}
-	#cursor:hover{
-		transform: rotate(-10deg);
 	}
 	.outline {
-    border: 1px solid #ccc;
-    border-radius: 3px;
+		border: 1px solid #ccc;
+		border-radius: 3px;
 	}
-	.big {
-    font-size: 1.4em;
-		font-weight: bold;
-		color: #555;
-		line-height: 1;
-	}
-	.numbers .add-margin{
-		margin-bottom: 1em;
-	}
-	h2{
+	h5{
+		/* float: left; */
 		margin-top: .5em;
 	}
 	a, a:visited, a:hover{
 		color: #000;
 	}
-	video{
-		width: 100%;
+	.multiline svg{
+		margin-bottom: .5em;
+	}
+	h5{
+		font-size: 1.3em;
+	}
+	h6{
+		margin-top: 6px;
+		margin-bottom: 3px;
 	}
 	@media screen and (max-width: 500px) {
-		h2{
-			font-size: 1.3rem;
-		}
-		.big{
+		h5{
 			font-size: 1.2rem;
+		}
+	}
+	.notwebapp .www_only{
+		display: none;
+	}
+
+	@media (prefers-color-scheme: dark) {
+		body.notwebapp{
+			background-color: #262626;
+		}
+		.notwebapp h5, .notwebapp h6, .notwebapp a, .notwebapp a:visited, .notwebapp a:hover{
+			color: #ddd;
+		}
+		.notwebapp .multiline svg{
+			background-color: #111;
+			border-color: #999;
+		}
+		.notwebapp .multiline text{
+			color: #fff;
+		}
+		.notwebapp .btn-outline-primary{
+			color: #fff;
+			background-color: #375a7f;
+			border-color: #375a7f;
 		}
 	}
 
 	</style>
 </head>
 
-<body>
+<body class="notwebapp">
 	<div class="container">
 
-		<div class="row numbers align-items-top margin-bottom outline worldmap">
+		<div class="row align-items-top">
 
 			<div class="col-12 group-label">
-				<h2><a target="_blank" href="https://labs.letemps.ch/interactive/2020/carte-coronavirus-monde/">Le Covid-19 en Suisse et dans le monde</a></h2>
-			</div>
-			<div class="text-center" id="corona-search">
-				<a target="_blank" href="https://labs.letemps.ch/interactive/2020/carte-coronavirus-monde/">
-				<!-- desktop -->
-				<video class="d-none d-sm-block" loop="true" muted="true" autoplay="true" playsinline="">
-					<source src="img/rec_desktop_v2.mp4?2" type="video/mp4">
-					Votre navigateur ne supporte pas les vidéos HTML.
-				</video>
-				<!-- mobile -->
-				<video class="d-block d-sm-none" loop="true" muted="true" autoplay="true" playsinline="">
-					<source src="img/rec_mobile_v2.mp4" type="video/mp4">
-					Votre navigateur ne supporte pas les vidéos HTML.
-				</video>
-				</a>
+				<h5><a target="_blank" href="https://labs.letemps.ch/interactive/2020/carte-coronavirus-monde/">Le Covid-19 en Suisse</a></h5>
+				<a target="_blank" href="https://labs.letemps.ch/interactive/2020/carte-coronavirus-monde/" class="btn btn-outline-primary btn-sm">Voir tous les graphiques</a>
+
+				<h6>Taux de reproduction effectif (Re)</h6>
+				<div class="multiline" id="reMeanCH"></div>
+
+				<h6 class="www_only">Nouveaux cas quotidiens</h6>
+				<div class="multiline www_only" id="chartDailyCH"></div>
 			</div>
 
 		</div>
-		</div>
+	</div>
 
-
-</div>
-
-
-	</body>
+	<script src="lib/d3.min.js"></script>
+	<script src="lib/d3-annotation.min.js"></script>
+	<script src="js/multiLineChart.js"></script>
 
 	<script>
 
@@ -103,25 +94,37 @@
 		var el = document.querySelector(selector);
 		el.innerText = text;
 	}
+	var height = Math.max( document.body.offsetHeight,
+                       document.documentElement.clientHeight, document.documentElement.offsetHeight );
+	console.log(height);
+	if(height > 400){
+		document.body.classList.remove('notwebapp');
+	}
 
 	// update chaque 100 seconde
 	var d = new Date();
 	var update = Math.round(d.getTime() / 10000)
 
-	if (window.fetch) {
-		fetch('data/metaAuto.json?' + update)
-		.then(function(response) { return response.json(); })
-		.then(function(data) {
-			setText('.deaths_total', data['deaths_total'] );
-			setText('.confirmed_total', data['confirmed_total'].toLocaleString('fr') );
-			setText('.recovered_total', data['recovered_total'].toLocaleString('fr') );
-			setText('.existing_total', data['existing_total'].toLocaleString('fr') );
-			setText('.dashboardUpdate', data['dashboardUpdate']);
-		});
-	}else{
-		// TODO
-		setText('.error', 'Mise à jour des chiffres impossible: le navigateur est trop ancien' );
+	var timeLocale = {
+		"dateTime": "%A %e %B %Y",
+		"date": "%d/%m/%Y",
+		"time": "%H:%M:%S",
+		"periods": ["AM", "PM"],
+		"days": ["dimanche", "lundi", "mardi", "mercredi", "jeudi", "vendredi", "samedi"],
+		"shortDays": ["dim.", "lun.", "mar.", "mer.", "jeu.", "ven.", "sam."],
+		"months": ["janvier", "février", "mars", "avril", "mai", "juin", "juillet", "août", "septembre", "octobre", "novembre", "décembre"],
+		"shortMonths": ["janv.", "févr.", "mars", "avr.", "mai", "juin", "juil.", "août", "sept.", "oct.", "nov.", "déc."]
 	}
+	d3.timeFormatDefaultLocale(timeLocale);
+
+	var chartDailyCH = new multilineChart({'selector': '#chartDailyCH', height: 110, margin: {top: 10, left: 50, right: 0, bottom: 25}, 'file': 'data/ch-daily-cases.csv?' + update, 'timeScale': true, 'yTickFormat': "d", 'hideLabel': true, 'annotationSplitter': /\n/})
+
+	var reMeanCH = new multilineChart({'selector': '#reMeanCH', height: 110, margin: {top: 10, left: 50, right: 0, bottom: 25}, 'file': 'data/re_switzerland.csv?' + update, 'timeScale': true, 'yTickFormat': ".2n", 'hideLabel': true, 'hasConfidenceInterval': true, 'xMin': true, 'straightLine': false})
+	setTimeout(function(){
+		reMeanCH.addReLimit();
+	}, 500)
+
 
 	</script>
-	</html>
+</body>
+</html>
